Elastic: Improvements to .ui-menu and z-index fix in the slider

--- a/plugins/jqueryui/themes/elastic/jquery-ui.css
+++ b/plugins/jqueryui/themes/elastic/jquery-ui.css
@@ -120,13 +120,16 @@
 }
 .ui-menu .ui-menu-item {
 	margin: 0;
-	cursor: pointer;
 	/* support: IE10, see #8844 */
 	list-style-image: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7");
 }
 .ui-menu .ui-menu-item-wrapper {
 	position: relative;
-	padding: 3px 1em 3px .4em;
+	padding: 0 .5em;
+	line-height: 2;
+	width: 100%;
+	display: inline-block;
+	text-decoration: none;
 }
 .ui-menu .ui-menu-divider {
 	margin: 5px 0;
@@ -674,7 +677,7 @@ button.ui-button::-moz-focus-inner {
 }
 .ui-slider .ui-slider-handle {
 	position: absolute;
-	z-index: 2;
+	z-index: 1;
 	width: 1.2em;
 	height: 1.2em;
 	cursor: default;
